unpackaged/main/default/objects/ShipmentItem__c/ShipmentItem__c.object-meta.xml
<CustomObject>
    <label>Shipment Item</label>
    <nameField>
        <displayFormat>SHP-IT-{0000000000}</displayFormat>
        <label>Shipment Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>