unpackaged/main/default/objects/ShipmentItem__c/fields/Actual_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Return_Date__c</fullName>
    <label>Actual Return Date</label>
    <type>Date</type>
</CustomField>