unpackaged/main/default/objects/ShipmentItem__c/fields/AssetID__c.field-meta.xml
<CustomField>
    <fullName>AssetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>Shipment_Items</relationshipName>
    <type>Lookup</type>
</CustomField>