unpackaged/main/default/objects/ShipmentItem__c/fields/Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Exhibition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>Shipment_Items</relationshipName>
    <type>Lookup</type>
</CustomField>