unpackaged/main/default/objects/ShipmentItem__c/fields/Item_is_Packed__c.field-meta.xml
<CustomField>
    <fullName>Item_is_Packed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item is Packed?</label>
    <type>Checkbox</type>
</CustomField>