unpackaged/main/default/objects/ShipmentItem__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>Shipment_Items</relationshipName>
    <type>Lookup</type>
</CustomField>