unpackaged/main/default/objects/ShipmentItem__c/fields/OrderProductID__c.field-meta.xml
<CustomField>
    <fullName>OrderProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>Shipment_Items</relationshipName>
    <type>Lookup</type>
</CustomField>