unpackaged/main/default/objects/ShipmentItem__c/fields/Packing_Status__c.field-meta.xml
<CustomField>
    <fullName>Packing_Status__c</fullName>
    <label>Packing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not packed</fullName>
                <default>true</default>
                <label>Not packed</label>
            </value>
            <value>
                <fullName>Packed in Shipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>