unpackaged/main/default/objects/ShipmentItem__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>Shipment_Items</relationshipName>
    <type>Lookup</type>
</CustomField>