unpackaged/main/default/objects/ShipmentItem__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Shipment does not exist or is not part of the same Order.</errorMessage>
        <filterItems>
            <field>Shipment__c.OrderID__c</field>
            <operation>equals</operation>
            <valueField>$Source.OrderID__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>Shipment_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>