unpackaged/main/default/objects/ShipmentItem__c/fields/Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_Kg__c</fullName>
    <label>Weight (Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>